css/custom.css
@import url(http://weloveiconfonts.com/api/?family=fontawesome);

    /* fontawesome */
    [class*="fontawesome-"]:before {
      font-family: 'FontAwesome', sans-serif;
    }

    body {
        padding-bottom: 40px;
        background-color: #1d1d1d;
      }
    .btn-primary{
      background-image: linear-gradient(#00AEEF, #00AEEF);
    }
    .btn-primary:hover{
      background-image: linear-gradient(#00AEEF, #00AEEF);
      color: #ffffff;
      background-color: #00AEEF;
    }


    .hero-unit {
    padding: 24px;
    margin:24px;
    margin-left: 0px;
    margin-right: 0px;
    font-size: 18px;
    font-weight: 200;
    line-height: 0px;
    color: inherit;
    background-color: #00AEEF;
      -webkit-border-radius: 0px;
     -moz-border-radius: 0px;
          border-radius: 0px;

    }

    h3{
      color: white;
      margin-top: 60px;
      font-weight:normal;
      text-align: left;
    }

    .text p{
      color: #ffffff;
      font-size: 16px;
      font-weight: 200;
      letter-spacing: 0.06em;
      margin:0 auto;
      margin-bottom:10px;
      line-height: 28px;
      font-family: inherit;
      text-align: left;

    }


.brand {
  background-color: #00AEEF;

}


.navbar .navbar-inner{
  border-radius:0px;
  background: #00AEEF !important; 
  background-image: none;
  background-repeat: no-repeat;
  filter: none !important;
  border-top:1px solid #00AEEF !important;
  border-bottom:1px solid #00AEEF !important;
  border-left:0px !important;
  border-right:0px !important;

  box-shadow: none;
}

.navbar {
  display: block;

  font-size: 16px;
  font-weight: 200;
  color: #777777;
  text-shadow: 0 1px 0 #ffffff;
  border-bottom: 0px;
  box-shadow: none;
  position: relative;
}

.navbar-fixed-top{
  position: relative;
}

.navbar .brand {
  margin-left: 20px;
}

.tagline {
  padding-left: 42px;
  padding-bottom: 50px;

}

.navbar .nav > li > a {

  color: #0F75BC;
  text-shadow: 0 0px 0 #000000;
  -webkit-box-shadow: none;
  box-shadow: none;
}

.navbar .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus {

  background-color: #00AEEF !important;
  -webkit-box-shadow: none;
  box-shadow: none;
  text-shadow: 0 0px 0 #ffffff;
  color: #ffffff;
}

.navbar .nav > a, .navbar .nav > a:hover, .navbar .nav > a:focus {
    background-color: #00AEEF !important;
  -webkit-box-shadow: none;
  box-shadow: none;
  text-shadow: 0 0px 0 #ffffff;
  color: #ffffff;

} 



/* Jumbotrons
-------------------------------------------------- */

/* Base class
------------------------- */
.jumbotron {
  position: relative;
  padding-top: 120px;
  padding-bottom: 60px;
  color: #2d2d2d;
  text-align: left;
  /*text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075); */
  background: #00AEEF; 
}
.jumbotron h1 {
  color: #9a9a9a;
  font-size: 48px;
  font-weight: normal;
  letter-spacing: -1px;
  line-height: 1;
}
.jumbotron p {
  color: #ffffff;
  font-size: 36px;
  font-weight: 300;
  margin-top: 47px;
margin-bottom: 0px;
}

.jumbotron img {
  margin-left: -13px;
}


/* Masthead (docs home)
------------------------- */
.masthead {
  padding: 70px 0 80px;
  margin-bottom: 0;
  color: #fff;
}
.masthead h1 {
  font-size: 120px;
  line-height: 1;
  letter-spacing: -2px;
}
.masthead p {
  font-size: 40px;
  font-weight: 200;
  line-height: 1.25;
}



/* Subhead (other pages)
------------------------- */
.subhead {
  text-align: left;
  border-bottom: 0px solid #ddd;
}
.subhead h1 {
  font-size: 60px;
}
.subhead p {
  margin-bottom: 20px;
}
.subhead .navbar {
  display: none;
}

.partner-img {
    text-align: left;
    margin: 30px 30px 30px 0px;
    max-height: 40px;
  }



/* Responsive
-------------------------------------------------- */

/* Desktop large
------------------------- */
@media (min-width: 1200px) {

}

/* Desktop
------------------------- */
@media (max-width: 980px) {
  /* Unfloat brand */
  body > .navbar-fixed-top .brand {
    float: left;
    margin-left: 0;
    padding-left: 10px;
    padding-right: 10px;
  }
}

/* Tablet to desktop
------------------------- */
@media (min-width: 768px) and (max-width: 979px) {
  /* Remove any padding from the body */
  body {
    padding-top: 0;
  }
  /* Widen masthead and social buttons to fill body padding */
  .jumbotron {
    margin-top: -20px; /* Offset bottom margin on .navbar */
  }

}

/* Tablet
------------------------- */
@media (max-width: 767px) {
  /* Remove any padding from the body */
  body {
    padding-top: 0;
  }

  /* Widen masthead and social buttons to fill body padding */
  .jumbotron {
    padding: 40px 20px;
    margin-top:   -20px; /* Offset bottom margin on .navbar */
    margin-right: -20px;
    margin-left:  -20px;
  }
  .masthead h1 {
    font-size: 90px;
  }
  .masthead p,
  .masthead .btn {
    font-size: 24px;
  }
  h3 {
    text-align: center;
  }
}

/* Landscape phones
------------------------- */
@media (max-width: 480px) {
  /* Remove padding above jumbotron */
  body {
    padding-top: 0;
  }

  /* Change up some type stuff */
  h2 small {
    display: block;
  }

  /* Downsize the jumbotrons */
  .jumbotron h1 {
    font-size: 45px;
  }
  .jumbotron p,
  .jumbotron .btn {
    font-size: 18px;
  }
  .jumbotron .btn {
    display: block;
    margin: 0 auto;
  }

  /* center align subhead text like the masthead */
  .subhead h1,
  .subhead p {
    text-align: center;
  }
}

